--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "crim intervals package"
 authors = ["Richard Freedman <rfreedma@haverford.edu>"]
 license = "creative commons"
 packages = [
-    { include = "." },
+    { include = "intervals" },
 ]
 
 [tool.poetry.dependencies]
